--- a/elements/chunks/ClientCarousel.html
+++ b/elements/chunks/ClientCarousel.html
@@ -1,60 +1,13 @@
-<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner container">
-    <div class="carousel-item placeholder-glow active" data-bs-interval="40000">
-      <div class="card mb-3" >
-        <div class="row g-0">
-          <div class="col-sm-2 d-flex justify-content-center align-items-start p-3">
-            <img src="/assets/images/default-client-photo.png" class="img-fluid rounded placeholder" alt="...">
-          </div>
-          <div class="col">
-            <div class="card-body">
-              <h5 class="card-title placeholder">Card title</h5>
-              <p class="card-title placeholder">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-title placeholder"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
+<div id="carouselExampleInterval" class="carousel slide py-5" data-bs-ride="carousel">
+    <div class="carousel-inner container">
+        [[!sliderClients]]
     </div>
-    <div class="carousel-item placeholder-glow" data-bs-interval="40000">
-      <div class="card mb-3" >
-        <div class="row g-0">
-          <div class="col-sm-2 d-flex justify-content-center align-items-start p-3">
-            <img src="/assets/images/default-client-photo.png" class="img-fluid rounded placeholder" alt="...">
-          </div>
-          <div class="col">
-            <div class="card-body">
-              <h5 class="card-title placeholder">Card title</h5>
-              <p class="card-title placeholder">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-title placeholder"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item placeholder-glow" data-bs-interval="40000">
-      <div class="card mb-3" >
-        <div class="row g-0">
-          <div class="col-sm-2 d-flex justify-content-center align-items-start p-3 ">
-            <img src="/assets/images/default-client-photo.png" class="img-fluid rounded placeholder" alt="...">
-          </div>
-          <div class="col">
-            <div class="card-body">
-              <h5 class="card-title placeholder">Card title</h5>
-              <p class="card-title placeholder">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-title placeholder"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" style="filter: invert(1);" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" style="filter: invert(1);" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+    <button class="carousel-control-prev" style="filter: invert(1);" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" style="filter: invert(1);" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
