--- a/elements/chunks/head.html
+++ b/elements/chunks/head.html
@@ -6,8 +6,8 @@
     <meta name="color-scheme" content="light">
     <meta name="homepage" content="EMEA Home Page AUG 29 2023">
     <meta name="format-detection" content="telephone=no">
-    <link rel="canonical" href="https://www.gucci.com/nl/en_gb/">
-    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="canonical" href="[[!++site_url]]">
+    <link rel="shortcut icon" href="/favicon.ico">
 
 [[$General]]
 [[$OpenGraph]]
