--- a/elements/chunks/ResourceDescription.html
+++ b/elements/chunks/ResourceDescription.html
@@ -1,4 +1,4 @@
-<section class="py-5 text-center container">
+<section class="py-5 text-center container placeholder-glow">
     <div class="row py-lg-5">
         <div class="col mx-auto">
             <h2 class="fw-light text-uppercase">[[+pagetitle]]</h2>
