--- a/elements/chunks/header.html
+++ b/elements/chunks/header.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container placeholder-glow">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <img class="bi me-2" height="32" src="/assets/images/SVG/logo.svg" alt="LOGO">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none placeholder">
+            <div style="width: 141px; height: 32px"></div>
+            <img style="display: none;" class="bi me-2" height="32" src="/assets/images/SVG/logo.svg" alt="LOGO">
         </a>
         <ul class="nav nav-pills">
             [[!constructHeader]]
