--- a/elements/snippets/pieces/constructHeader/item.html
+++ b/elements/snippets/pieces/constructHeader/item.html
@@ -1,4 +1,4 @@
 <li class="nav-item">
-    <a class="nav-link me-3P[[+CLASS+]]" aria-current="page" href="[[~[[+CONTENT+]]]]">[[+PAGETITLE+]]</a>
+    <a class="nav-link me-3 [[+CLASS+]]" aria-current="page" href="[[~[[+CONTENT+]]]]">[[+PAGETITLE+]]</a>
 </li>
 
