--- a/elements/chunks/ResourceDescription.html
+++ b/elements/chunks/ResourceDescription.html
@@ -4,8 +4,8 @@
             <h2 class="fw-light text-uppercase">[[+pagetitle]]</h2>
             <p class="lead text-body-secondary">[[+description]]</p>
             <p>
-                <a href="tel:" class="btn btn-primary my-2">Contact us</a>
-                <a href="mailto:" class="btn btn-secondary my-2">Send Email</a>
+                <a href="tel:+10000000000" class="btn btn-primary my-2">Contact us</a>
+                <a href="mailto:mail@afchl.com" class="btn btn-secondary my-2">Send Email</a>
             </p>
         </div>
     </div>
