--- a/elements/chunks/head.html
+++ b/elements/chunks/head.html
@@ -7,7 +7,7 @@
     <meta name="homepage" content="EMEA Home Page AUG 29 2023">
     <meta name="format-detection" content="telephone=no">
     <link rel="canonical" href="[[!++site_url]]">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico?v=afch">
 
 [[$General]]
 [[$OpenGraph]]
