--- a/elements/chunks/header.html
+++ b/elements/chunks/header.html
@@ -1,7 +1,7 @@
 <div class="container">
     <header class="d-flex flex-wrap justify-content-center align-items-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none px-5">
-            <img class="bi me-2" width="150" src="/assets/images/SVG/logo.svg" alt="LOGO">
+            <img class="bi me-2" width="150" src="/assets/images/SVG/logo.svg?v=afch" alt="LOGO">
         </a>
         <ul class="nav nav-pills">
             [[constructHeader]]
